# ChangeLog for net-im/pidgin
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*pidgin-2.7.3-r1 (13 Oct 2010)

  13 Oct 2010; Dean Matzkov <bapabooiee@gmail.com>
  +files/pidgin-2.7.2-ldflags.patch, +pidgin-2.7.3-r1.ebuild:
  Initial import
