@@ -1,6 +1,8 @@
 AUX pidgin-2.7.2-ldflags.patch 1593 RMD160 ade438f25d0af927485523e561ce728762645948 SHA1 6ac16bd019ad048109643af5e3525987c994dbb0 SHA256 64d78b48111345b49216e9678c114f321963393b4fd0aa6046de8aec6f03cb44
 DIST pidgin-2.7.3-alternate-tray-icon.png 925 RMD160 850e9630a68ba7153e0eb9d14801383c9f1d664d SHA1 cd1d36c6e2117477d89f2e915aeaf1fea7ab1153 SHA256 6bdc0cd276a504cb5fff7c7bffae8f3fad210fb9d11853283988640b20a56917
 DIST pidgin-2.7.3.tar.bz2 9746117 RMD160 276fb19abf6505f9d56120c7412987002511fcb3 SHA1 81b9b5591ddbdf36aa656ddd90ff935ae090e940 SHA256 8b5788aa7b8c3fa372e6c5f671592731c86e41322bcc09facb6bbe6127e323f2
+DIST pidgin-2.7.4.tar.bz2 9799804 RMD160 900cdcffa34bfc43da803abf5427fdde8bb00b4e SHA1 f7d8d0fcecddda636db642e403280e85b76ea5f2 SHA256 7c6fa2811082bde2dbd0897414f9f8f18e7c3e51159288571af1f1f2ce81f856
 EBUILD pidgin-2.7.3-r1.ebuild 6534 RMD160 bf34b7a416714138be60ae3923b5d6ae657ed58d SHA1 ae86f49923275605350e2bbdbf645f50e4f8796d SHA256 a4ad564722dd94db8551fc65cdbef4f244c5baba4a40043f5dc8a14299154448
+EBUILD pidgin-2.7.4.ebuild 6099 RMD160 e8e748cd85c2039975d5e5e4794b08f9e8a3722a SHA1 b9105b45bcf01f1b2dd3457f9494beb6c9b164e1 SHA256 64960878627d052084dfd69bf82d0261ab05de0ae3b79a3974a54fc7dc04b238
 MISC ChangeLog 277 RMD160 3545b29b0c9ebfebbdef0ebcd6f42b0580a38496 SHA1 c72660de3ad4cedc15c6c96dc2dfd1fd3de2ed64 SHA256 63f7a51abc603193ffba3991e14acc7a32ceb9dea8ad13e737ea3eee072aa7ab
 MISC metadata.xml 1242 RMD160 b6ceb3a806b42dc192a049ab15851054af3b8ab3 SHA1 109b5e10a201cafcfe0c0a975e2a82f914c73972 SHA256 72ef9e8878a61a05fab986d1ef62009b267fc377dcc0efc27c4b7c57c3129b8e
