@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pidgin-2.7.4 (21 Oct 2010)
+
+  21 Oct 2010; Dean Matzkov <bapabooiee@gmail.com> +pidgin-2.7.4.ebuild:
+  Version bump
+
 *pidgin-2.7.3-r1 (13 Oct 2010)
 
   13 Oct 2010; Dean Matzkov <bapabooiee@gmail.com>
